Fix double border

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body {
 
 .playpause {
   border-right: 1px dashed #fff;
-  border-bottom: 1px dashed #fff;
 }
 
 .playpause .play {
